--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ ros/src/tl_detector/light_classification/training/ImageCut/ImageCut/obj
 ros/src/tl_detector/light_classification/training/ImageCut/ImageCut/bin
 ros/src/tl_detector/light_classification/output/
 ros/src/tl_detector/light_classification/unknown/
-ros/src/tl_detector (copy)/
+ros/src/tl_detector/light_classification/*.jpg
